# mantis

./: .bumpversion.cfg  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  book.toml  index.html  launch.py  main.py  print.html  pyproject.toml  requirements.txt  scheduler.py  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dashboard-release.yml  mantis-cli-latest-release.yml  mantis-cli-mr-release.yml  mantis-cli-pr-merge.yml  mantis-cli-release.yml  mantis-dashboard-pr-release.yml  mantis-dashboard-release.yml  mdbook-action.yml  test.yml
basics-mantis-code/: basics.html  db-models.html  folder-structure.html  important-utils.html  scanner-base-class.html
configs/: aws_credentials  local.yml
configuration/: app-context-config.html  command-line.html  config-file.html  configuration.html  scheduler-config.html  slack-config.html  workflow-config.html
css/: custom.css
dashboard/: Dockerfile  docker-compose.yml  main.py  requirements.txt  test.html
dashboard/config/: db.py
dashboard/models/: user.py
dashboard/routes/: assets.py  network_information.py  org.py  static_page_routes.py
dashboard/static/: org_fetch.js  table.js
dashboard/templates/: 404.html  Phishing.html  assets.html  certificates.html  information_vul.html  login.html  network_info.html  secrets.html
dashboard_templates/: Mantis Dashboard.json
features/: advanced_alerting.html  dashboard_support.html  distributed_scanning.html  dns_services.html  features.html  new_scanner.html  recon_automation.html  scan_efficiency.html  secrets_scanning.html  workflow_customisation.html
installation/: ansible.html  installation-docker.html  installation-mac.html  installation-multi-setup-config.html  installation-multi-setup-dashboard.html  installation-multi-setup-install.html  installation-multi-setup-intro.html  installation-multi-setup-run.html  installation-multiple.html  installation-ubuntu.html  installation-windows.html  installation.html
introduction/: introduction.html
mantis/: constants.py
mantis/config_parsers/: config_client.py  config_models.py  logging_utils.py
mantis/db/: crud_assets.py  crud_extended_assets.py  crud_vulnerabilities.py  database.py  db_models.py
mantis/models/: args_model.py  tool_logs_model.py
mantis/modules/: alerter.py  workflow.py
mantis/scan_orchestration/: ray_scan.py  threadpool_scan.py
mantis/tool_base_classes/: apiScanner.py  baseScanner.py  toolScanner.py
mantis/utils/: args_parse.py  asset_type.py  base_request.py  common_utils.py  config_utils.py  crud_utils.py  list_assets.py  list_subcommand_utils.py  notifications.py  tool_utils.py
mantis/workflows/: list_workflow.py  mantis_workflow.py  report_workflow.py
new-scanner-integrations/: command-config-file.html  command-docker-file.html  command-line-class.html  new-scanner-integration-api.html  new-scanner-integration-command-line.html  new-scanner-integration.html
notifications/: notifications-slack.html  notifications.html
routes/: assets.py  certificates.py  informational_vulnerabilities.py  login_reg.py  network_information.py  org.py  phishing_domain.py  secrets.py  vulnerabilities.py
scan/: scan.html
setup/: .gitignore  native-setup.sh
setup/ansible/: README.md  native-setup.yml
setup/docker/: .gitignore  docker-compose-appsmith.yml  docker-compose-mantis.yml  docker-compose.yml  docker-setup-macos-experimental.sh  docker-setup-macos-legacy.sh  docker-setup-macos-stable.sh  docker-setup-macos.sh  docker-setup-ubuntu-experimental.sh  docker-setup-ubuntu.sh  docker-setup-windows.ps1  docker-setup.sh
setup/macos/: devbox.json  docker-compose.yml  setup-mantis-macos.sh
setup/ubuntu/: devbox.json  docker-compose.yml  setup-mantis-ubuntu.sh
src/: SUMMARY.md
src/basics-mantis-code/: basics.md  db-models.md  folder-structure.md  important-utils.md  scanner-base-class.md
src/configuration/: app-context-config.md  command-line.md  config-file.md  configuration.md  scheduler-config.md  slack-config.md  workflow-config.md
src/features/: 2x_faster.md  advanced_alerting.md  dashboard_support.md  distributed_scanning.md  (+7 more)
templates/: Phishing.html  admin.html  base.html  index.html  login.html  reg.html  secrets.html  vulnerabilities.html
testing-new-changes/: building-containers-locally.html  testing.html
tools/: tools.html
(+88 files in other folders)
