[tool.poetry]
name = "mantis"
version = "1.0.0"
description = "Mantis is a security framework that automates the workflow of discovery, reconnaissance, and vulnerability scanning."
license = "apache2"
repository = "https://github.com/PhonePe/mantis"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Internal Security Teams",
    "Intended Audience :: Bug Bounty Hunters",
    "Topic :: Application Security :: Recon Framework"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
decorator = "5.1.1"
motor = "3.0.0"
netaddr = "0.8.0"
pydantic = "1.10.2"
pymongo = "4.2.0"
PyYAML = "6.0"
typing_extensions = "4.4.0"
validators = "0.20.0"
tldextract = "3.4.0"
pytz = "2022.6"
ray = {version = "2.8.0", extras = ["default"]}
retry = "0.9.2"
slack-sdk = "3.21.3"
rocketry = "2.5.1"
boto3 = "1.28.20"
tqdm = "4.66.1"
cloudflare = "*"

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''
version = "{current_version}"
'''
replace = '''
version = "{new_version}"
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
