[tool.poetry]
name = "mantis"
version = "1.5.0"
description = "Mantis is a security framework that automates the workflow of discovery, reconnaissance, and vulnerability scanning."
authors = ["Prateek Thakare <pratikthakare65@gmail.com>",
           "Bharath Kumar <bharath.isecure@protonmail.com>", 
           "Saddam Hussain <hopesaddam@gmail.com>",
           "Hitesh Kumar <0hitesh.thakur@gmail.com>",
           "Praveen Kanniah <praveen.kanniah@gmail.com>"
           ]
maintainers = ["Prateek Thakare <pratikthakare65@gmail.com>",
           "Bharath Kumar <bharath.isecure@protonmail.com>", 
           "Saddam Hussain <hopesaddam@gmail.com>",
           "Hitesh Kumar <0hitesh.thakur@gmail.com>",
           "Praveen Kanniah <praveen.kanniah@gmail.com>"
           ]
license = "apache2"
repository = "https://github.com/PhonePe/mantis"
keywords = ["asset discovery", "recon", "recon automation", "osint", "threat intelligence", "recon framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Internal Security Teams",
    "Intended Audience :: Bug Bounty Hunters",
    "Topic :: Application Security :: Recon Framework"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
decorator = "5.1.1"
motor = "3.0.0"
netaddr = "0.8.0"
pydantic = "1.10.2"
pymongo = "4.2.0"
PyYAML = "6.0"
typing_extensions = "4.4.0"
validators = "0.20.0"
tldextract = "3.4.0"
pytz = "2022.6"
ray = {version = "2.8.0", extras = ["default"]}
retry = "0.9.2"
slack-sdk = "3.21.3"
rocketry = "2.5.1"
boto3 = "1.28.20"
tqdm = "4.66.1"
cloudflare = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
